# CameraRenderDemo

./: settings.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/zzw/openglescamerademo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/libyuv/: Android.mk  CMakeLists.txt
app/src/main/cpp/libyuv/include/libyuv/: convert.h  cpu_id.h
app/src/main/java/com/zzw/openglescamerademo/: CameraActivity.java  MainActivity.java
app/src/main/java/com/zzw/openglescamerademo/cameraview/: CameraImpl.java  CameraView.java  TextureViewPreview.java
app/src/main/java/com/zzw/openglescamerademo/cameraview/base/: AspectRatio.java  Constants.java  DisplayOrientationDetector.java  Size.java  SizeMap.java
app/src/main/java/com/zzw/openglescamerademo/opengl/: CameraGLSurfaceView.java  CameraRender.java  RGBTexture.java  ShaderUtil.java
app/src/main/res/layout/: activity_camera.xml
app/src/main/res/raw/: fragment_shader.glsl  vertex_shader.glsl
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/com/zzw/openglescamerademo/: ExampleUnitTest.java
openCVLibrary343/: build.gradle  local.properties
openCVLibrary343/src/main/java/org/opencv/android/: CameraBridgeViewBase.java
